添加自定义确认框

--- a/native/engine/android/res/values/styles.xml
+++ b/native/engine/android/res/values/styles.xml
@@ -4,4 +4,11 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@drawable/splash_slogan_view</item>
     </style>
+
+    <style name="Dialog_Fullscreen" parent="AlertDialog.AppCompat.Light">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
